--- a/index.html
+++ b/index.html
@@ -95,7 +95,181 @@
 
 
 
-    <article class="container" page>
+    <article class="container" page-content>
+
+        <!-- banner -->
+
+        <section class="banner" aria-label="popular movies">
+
+            <div class="banner-slider">
+                <div class="slider-item active" slider-item>
+                    <img src="./assets/images/slider-banner.jpg" class="img-cover" loading="eager" alt="Puss in Boots">
+
+                    <div class="banner-content">
+                        <h2 class="heading">
+                            puss in Boots
+                        </h2>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                2023
+                            </div>
+                            <div class="meta-item card-badge"> 7.5</div>
+                            <p class="genre">Anima, Acti,Adven</p>
+                            <p class="banner-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam commodi
+                                repudiandae harum obcaecati, doloribus, non facilis architecto illo dolorem vero
+                                perspiciatis id tenetur sunt dicta, vitae eveniet officiis expedita?
+                            </p>
+                            <a href="./detail.html" class="btn">
+                                <img src="./assets//images/play_circle.png" width="24" height="24" aria-hidden="true"
+                                    alt="play Circle">
+                                <span class="span">Watch Now</span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-item " slider-item>
+                    <img src="./assets/images/slider-banner.jpg" class="img-cover" loading="eager" alt="Puss in Boots">
+
+                    <div class="banner-content">
+                        <h2 class="heading">
+                            puss in Boots
+                        </h2>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                2023
+                            </div>
+                            <div class="meta-item card-badge"> 7.5</div>
+                            <p class="genre">Anima, Acti,Adven</p>
+                            <p class="banner-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam commodi
+                                repudiandae harum obcaecati, doloribus, non facilis architecto illo dolorem vero
+                                perspiciatis id tenetur sunt dicta, vitae eveniet officiis expedita?
+                            </p>
+                            <a href="./detail.html" class="btn">
+                                <img src="./assets//images/play_circle.png" width="24" height="24" aria-hidden="true"
+                                    alt="play Circle">
+                                <span class="span">Watch Now</span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-item " slider-item>
+                    <img src="./assets/images/slider-banner.jpg" class="img-cover" loading="eager" alt="Puss in Boots">
+
+                    <div class="banner-content">
+                        <h2 class="heading">
+                            puss in Boots
+                        </h2>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                2023
+                            </div>
+                            <div class="meta-item card-badge"> 7.5</div>
+                            <p class="genre">Anima, Acti,Adven</p>
+                            <p class="banner-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam commodi
+                                repudiandae harum obcaecati, doloribus, non facilis architecto illo dolorem vero
+                                perspiciatis id tenetur sunt dicta, vitae eveniet officiis expedita?
+                            </p>
+                            <a href="./detail.html" class="btn">
+                                <img src="./assets//images/play_circle.png" width="24" height="24" aria-hidden="true"
+                                    alt="play Circle">
+                                <span class="span">Watch Now</span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-item " slider-item>
+                    <img src="./assets/images/slider-banner.jpg" class="img-cover" loading="eager" alt="Puss in Boots">
+
+                    <div class="banner-content">
+                        <h2 class="heading">
+                            puss in Boots
+                        </h2>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                2023
+                            </div>
+                            <div class="meta-item card-badge"> 7.5</div>
+                            <p class="genre">Anima, Acti,Adven</p>
+                            <p class="banner-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam commodi
+                                repudiandae harum obcaecati, doloribus, non facilis architecto illo dolorem vero
+                                perspiciatis id tenetur sunt dicta, vitae eveniet officiis expedita?
+                            </p>
+                            <a href="./detail.html" class="btn">
+                                <img src="./assets//images/play_circle.png" width="24" height="24" aria-hidden="true"
+                                    alt="play Circle">
+                                <span class="span">Watch Now</span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-item " slider-item>
+                    <img src="./assets/images/slider-banner.jpg" class="img-cover" loading="eager" alt="Puss in Boots">
+
+                    <div class="banner-content">
+                        <h2 class="heading">
+                            puss in Boots
+                        </h2>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                2023
+                            </div>
+                            <div class="meta-item card-badge"> 7.5</div>
+                            <p class="genre">Anima, Acti,Adven</p>
+                            <p class="banner-text">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam commodi
+                                repudiandae harum obcaecati, doloribus, non facilis architecto illo dolorem vero
+                                perspiciatis id tenetur sunt dicta, vitae eveniet officiis expedita?
+                            </p>
+                            <a href="./detail.html" class="btn">
+                                <img src="./assets//images/play_circle.png" width="24" height="24" aria-hidden="true"
+                                    alt="play Circle">
+                                <span class="span">Watch Now</span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slider-control">
+                <div class="control-inner">
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                    <button class="poster-box slider-item active">
+                        <img src="./assets/images/slider-control.jpg" alt="slider+ to boots" loading="false"
+                            draggable="true">
+                    </button>
+                </div>
+            </div>
+
+        </section>
+
 
     </article>
 
