Movies web using TMDB API

--- a/detail.html
+++ b/detail.html
@@ -103,7 +103,7 @@
 
         <!-- movies list -->
 
-        <section class="movie-list" aria-label="upcoming movies">
+        <!-- <section class="movie-list" aria-label="upcoming movies">
             <div class="title-wrapper">
                 <h3 class="title-large">You May Also Like</h3>
             </div>
@@ -351,7 +351,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
     </article>
