Movies web using TMDB API

--- a/detail.html
+++ b/detail.html
@@ -102,11 +102,9 @@
 
 
         <!-- movies list -->
+        <!-- 
+        <section class="movie-list" aria-label="upcoming movies">
 
-        <!-- <section class="movie-list" aria-label="upcoming movies">
-            <div class="title-wrapper">
-                <h3 class="title-large">You May Also Like</h3>
-            </div>
             <div class="slider-list">
                 <div class="slider-inner">
                     <div class="movie-card">
@@ -351,8 +349,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-
+        </section>
+ -->
 
     </article>
 
