--- a/movie-list.html
+++ b/movie-list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie-list</title>
+    <!-- <title>Movie-list</title> -->
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- js -->
     <script src="./assets/js/global.js" defer></script>
-    <script src="./assets/js/detail.js" type="module"></script>
+    <script src="./assets/js/movie-list.js" type="module"></script>
     <!-- links -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,33 +61,6 @@
 
     <!-- SideBar -->
     <nav class="sidebar " sidebar>
-        <div class="sidebar-inner">
-            <div class="sidebar-list">
-                <p class="title"> Genre</p>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Action</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Horror</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Comedy</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Adven</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Drama</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Sci-fi</a>
-            </div>
-            <div class="sidebar-list">
-                <p class="title"> Language</p>
-                <a href="./movie-list.html" menu-close class="sidebar-link">English</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Marathi</a>
-            </div>
-
-            <div class="sidebar-footer">
-                <p class="copyright">
-                    Copyright 2003 All right Open <br>Made by Prem Shinde
-                </p>
-                <img src="./assets/images/logo2.png" width="40" height="30" alt="logo">
-            </div>
-
-
-
-        </div>
 
     </nav>
 
@@ -98,122 +71,11 @@
     <article class="container" page-content>
 
 
-        <!-- movies list -->
-
-        <section class="movie-list genre-list ">
-            <div class="title-wrapper">
-                <h1 class="heading">All Fantasy Movie</h1>
-            </div>
-
-            <div class="grid-list">
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-
-
-            </div>
-            <button class="btn load-more ">Load more</button>
-
-        </section>
-
 
     </article>
 
 
-    <div class="search-modal active">
+    <!-- <div class="search-modal active">
         <p class="lable">
             Results for
         </p>
@@ -320,7 +182,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 </body>
 
