Movies web using TMDB API Completed

--- a/detail.html
+++ b/detail.html
@@ -59,50 +59,53 @@
 
     </header>
 
-    <!-- SideBar -->
-    <nav class="sidebar " sidebar>
-        <div class="sidebar-inner">
-            <div class="sidebar-list">
-                <p class="title"> Genre</p>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Action</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Horror</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Comedy</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Adven</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Drama</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Sci-fi</a>
+    <main>
+
+
+        <!-- SideBar -->
+        <nav class="sidebar " sidebar>
+            <div class="sidebar-inner">
+                <div class="sidebar-list">
+                    <p class="title"> Genre</p>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Action</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Horror</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Comedy</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Adven</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Drama</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Sci-fi</a>
+                </div>
+                <div class="sidebar-list">
+                    <p class="title"> Language</p>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">English</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
+                    <a href="./movie-list.html" menu-close class="sidebar-link">Marathi</a>
+                </div>
+
+                <div class="sidebar-footer">
+                    <p class="copyright">
+                        Copyright 2003 All right Open <br>Made by Prem Shinde
+                    </p>
+                    <img src="./assets/images/logo2.png" width="40" height="30" alt="logo">
+                </div>
+
+
+
             </div>
-            <div class="sidebar-list">
-                <p class="title"> Language</p>
-                <a href="./movie-list.html" menu-close class="sidebar-link">English</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Hindi</a>
-                <a href="./movie-list.html" menu-close class="sidebar-link">Marathi</a>
-            </div>
 
-            <div class="sidebar-footer">
-                <p class="copyright">
-                    Copyright 2003 All right Open <br>Made by Prem Shinde
-                </p>
-                <img src="./assets/images/logo2.png" width="40" height="30" alt="logo">
-            </div>
+        </nav>
+
+        <div class="overlay " overlay menu-toggler> </div>
 
 
 
-        </div>
+        <article class="container" page-content>
 
-    </nav>
-
-    <div class="overlay " overlay menu-toggler> </div>
+            <!-- Movies details -->
 
 
 
-    <article class="container" page-content>
-
-        <!-- Movies details -->
-
-
-
-        <!-- movies list -->
-        <!-- 
+            <!-- movies list -->
+            <!-- 
         <section class="movie-list" aria-label="upcoming movies">
 
             <div class="slider-list">
@@ -352,7 +355,9 @@
         </section>
  -->
 
-    </article>
+        </article>
+
+    </main>
 
 
 </body>
