--- a/index.html
+++ b/index.html
@@ -62,21 +62,23 @@
 
     </header>
 
-    <!-- SideBar -->
-    <nav class="sidebar  " sidebar>
+    <main>
+
+        <!-- SideBar -->
+        <nav class="sidebar  " sidebar>
 
 
-    </nav>
+        </nav>
 
-    <div class="overlay " overlay menu-toggler> </div>
+        <div class="overlay " overlay menu-toggler> </div>
 
 
 
-    <article class="container" page-content>
+        <article class="container" page-content>
 
-        <!-- banner -->
+            <!-- banner -->
 
-        <!-- <section class="banner" aria-label="popular movies">
+            <!-- <section class="banner" aria-label="popular movies">
 
             <div class="banner-slider">
                 <div class="slider-item " slider-item>
@@ -124,12 +126,14 @@
         </section>
  -->
 
-        <!-- movies list -->
+            <!-- movies list -->
 
 
 
-    </article>
+        </article>
 
+
+    </main>
 
 </body>
 
