--- a/movie-list.html
+++ b/movie-list.html
@@ -59,130 +59,30 @@
 
     </header>
 
-    <!-- SideBar -->
-    <nav class="sidebar " sidebar>
 
-    </nav>
-
-    <div class="overlay " overlay menu-toggler> </div>
+    <main>
 
 
+        <!-- SideBar -->
+        <nav class="sidebar " sidebar>
 
-    <article class="container" page-content>
+        </nav>
 
-
-
-    </article>
-
-
-    <!-- <div class="search-modal active">
-        <p class="lable">
-            Results for
-        </p>
-        <h1 class="heading">Puss in Boots </h1>
-        <div class="movie-list">
-            <div class="grid-list">
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
-                <div class="movie-card">
-                    <figure class="poster-box card-banner">
-                        <img src="./assets/images/slider-control.jpg" class="img-cover" alt="puss in boots">
-                    </figure>
-                    <h4 class="title">Puss in Boots</h4>
-                    <div class="meta-list">
-                        <div class="meta-item">
-                            <img src="./assets/images/star.png" width="20" height="20" alt="rating">
-                            <span class="span">9.0</span>
-                        </div>
-
-                        <div class="card-badge">2023</div>
-                    </div>
-
-                    <a href="./detail.html" class="card-btn" title="puss in boots"></a>
-                </div>
+        <div class="overlay " overlay menu-toggler> </div>
 
 
-            </div>
-        </div>
-    </div> -->
+
+        <article class="container" page-content>
+
+
+
+        </article>
+
+
+
+
+    </main>
+
 
 </body>
 
