Movies web using TMDB API Completed with Php

--- a/movie-list.html
+++ b/movie-list.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header class="header">
 
-        <a href="./index.html" class="logo">
+        <a href="./index.php" class="logo">
             <img src="./assets/images/logo2.png" width="50" height="32" alt="MOvies">
         </a>
         <div class="search-box " search-box>
